[gd_scene load_steps=18 format=2]

[ext_resource path="res://UI/BasicTheme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/MainController.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/space-wallpaper-13-1024x700.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/Textures/PulsarLogo.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/Screen.tres" type="Texture" id=5]
[ext_resource path="res://Assets/Textures/MaintenenceButton.png" type="Texture" id=6]
[ext_resource path="res://Assets/Textures/RedPixel.png" type="Texture" id=7]
[ext_resource path="res://Assets/Textures/engineering.png" type="Texture" id=8]
[ext_resource path="res://Assets/Textures/lifesupport.png" type="Texture" id=9]
[ext_resource path="res://Assets/Textures/sciencelab.png" type="Texture" id=10]
[ext_resource path="res://Assets/Textures/weaponsys.png" type="Texture" id=11]
[ext_resource path="res://Assets/Textures/OverClockRed.png" type="Texture" id=12]
[ext_resource path="res://Assets/Textures/OverClock.png" type="Texture" id=13]
[ext_resource path="res://Assets/Textures/BluePixel.png" type="Texture" id=14]
[ext_resource path="res://Assets/Textures/Arrow.png" type="Texture" id=15]
[ext_resource path="res://Assets/Textures/fire.png" type="Texture" id=16]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Base" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Tabs" type="TabContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Main" type="Tabs" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0

[node name="ScreenBase" type="NinePatchRect" parent="Tabs/Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -240.0
margin_right = 240.0
margin_bottom = 240.0
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 126, 126 )
patch_margin_left = 30
patch_margin_top = 54
patch_margin_right = 36
patch_margin_bottom = 33

[node name="SEP" type="ColorRect" parent="Tabs/Main/ScreenBase"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -3.0
margin_bottom = 33.0

[node name="UP" type="Control" parent="Tabs/Main/ScreenBase"]
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 465, 174 )

[node name="LSHLD" type="Label" parent="Tabs/Main/ScreenBase/UP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = 34.0
margin_right = 253.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -427, -29 )
text = "SHLD"

[node name="LSN" type="Label" parent="Tabs/Main/ScreenBase/UP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -18.0
margin_right = 173.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( -427, -29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MY SHIP NAME"

[node name="LHULL" type="Label" parent="Tabs/Main/ScreenBase/UP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = 66.0
margin_right = 253.0
margin_bottom = 100.0
text = "HULL"

[node name="LREAC" type="Label" parent="Tabs/Main/ScreenBase/UP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = 114.0
margin_right = 311.0
margin_bottom = 148.0
text = "REACTOR"

[node name="LQTS" type="Label" parent="Tabs/Main/ScreenBase/UP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = 146.0
margin_right = 326.0
margin_bottom = 180.0
text = "QT SHIELD"

[node name="LO2D" type="Label" parent="Tabs/Main/ScreenBase/UP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = 178.0
margin_right = 311.0
margin_bottom = 212.0
text = "O2 DELTA"

[node name="EHP" type="Label" parent="Tabs/Main/ScreenBase/UP"]
margin_left = 24.0
margin_top = 198.0
margin_right = 48.0
margin_bottom = 228.0
text = "20"
align = 1

[node name="WHP" type="Label" parent="Tabs/Main/ScreenBase/UP"]
margin_left = 56.0
margin_top = 198.0
margin_right = 80.0
margin_bottom = 227.0
rect_pivot_offset = Vector2( -56, -96 )
text = "20"
align = 1

[node name="LHP" type="Label" parent="Tabs/Main/ScreenBase/UP"]
margin_left = 88.0
margin_top = 198.0
margin_right = 112.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( -232, 216 )
text = "20"
align = 1

[node name="SHP" type="Label" parent="Tabs/Main/ScreenBase/UP"]
margin_left = 120.0
margin_top = 198.0
margin_right = 144.0
margin_bottom = 224.0
text = "20"
align = 1

[node name="EHPBar" type="TextureProgress" parent="Tabs/Main/ScreenBase/UP"]
margin_left = 24.0
margin_top = 86.0
margin_right = 48.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( -27, 50 )
max_value = 20.0
value = 20.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="FIRE" type="TextureRect" parent="Tabs/Main/ScreenBase/UP/EHPBar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -34.0
margin_right = 12.0
margin_bottom = -8.0
texture = ExtResource( 16 )
expand = true

[node name="WHPBar" type="TextureProgress" parent="Tabs/Main/ScreenBase/UP"]
margin_left = 56.0
margin_top = 86.0
margin_right = 80.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( -27, 50 )
max_value = 20.0
value = 20.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="FIRE" type="TextureRect" parent="Tabs/Main/ScreenBase/UP/WHPBar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -34.0
margin_right = 12.0
margin_bottom = -8.0
texture = ExtResource( 16 )
expand = true

[node name="LHPBar" type="TextureProgress" parent="Tabs/Main/ScreenBase/UP"]
margin_left = 88.0
margin_top = 86.0
margin_right = 112.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( -27, 50 )
max_value = 20.0
value = 20.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="FIRE" type="TextureRect" parent="Tabs/Main/ScreenBase/UP/LHPBar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -34.0
margin_right = 12.0
margin_bottom = -8.0
texture = ExtResource( 16 )
expand = true

[node name="SHPBar" type="TextureProgress" parent="Tabs/Main/ScreenBase/UP"]
margin_left = 120.0
margin_top = 86.0
margin_right = 144.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( -27, 50 )
max_value = 20.0
value = 20.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="FIRE" type="TextureRect" parent="Tabs/Main/ScreenBase/UP/SHPBar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -34.0
margin_right = 12.0
margin_bottom = -8.0
texture = ExtResource( 16 )
expand = true

[node name="EICO" type="TextureRect" parent="Tabs/Main/ScreenBase/UP"]
margin_left = 24.0
margin_top = 54.0
margin_right = 48.0
margin_bottom = 78.0
texture = ExtResource( 8 )
expand = true

[node name="WICO" type="TextureRect" parent="Tabs/Main/ScreenBase/UP"]
margin_left = 56.0
margin_top = 54.0
margin_right = 80.0
margin_bottom = 78.0
texture = ExtResource( 11 )
expand = true

[node name="LICO" type="TextureRect" parent="Tabs/Main/ScreenBase/UP"]
margin_left = 88.0
margin_top = 54.0
margin_right = 112.0
margin_bottom = 78.0
texture = ExtResource( 9 )
expand = true

[node name="SICO" type="TextureRect" parent="Tabs/Main/ScreenBase/UP"]
margin_left = 120.0
margin_top = 54.0
margin_right = 144.0
margin_bottom = 78.0
texture = ExtResource( 10 )
expand = true

[node name="LSHLDVAL" type="Label" parent="Tabs/Main/ScreenBase/UP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 34.0
margin_right = 445.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -427, -29 )
custom_colors/font_color = Color( 0, 0.290196, 1, 1 )
text = "0 / 0"
align = 2

[node name="LHULLVAL" type="Label" parent="Tabs/Main/ScreenBase/UP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 66.0
margin_right = 445.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( -427, -29 )
custom_colors/font_color = Color( 0.737255, 0.109804, 0, 1 )
text = "0 / 0"
align = 2

[node name="LREACVAL" type="Label" parent="Tabs/Main/ScreenBase/UP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 114.0
margin_right = 445.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( -427, -29 )
text = "  Ok"
align = 2

[node name="LQTSVAL" type="Label" parent="Tabs/Main/ScreenBase/UP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 146.0
margin_right = 445.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -427, -29 )
text = "  Ok"
align = 2

[node name="LO2VAL" type="Label" parent="Tabs/Main/ScreenBase/UP"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 178.0
margin_right = 445.0
margin_bottom = 212.0
rect_pivot_offset = Vector2( -427, -29 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "  Ok"
align = 2

[node name="DOWN" type="Control" parent="Tabs/Main/ScreenBase"]
margin_top = 238.0
margin_right = 40.0
margin_bottom = 278.0
rect_pivot_offset = Vector2( 465, 174 )

[node name="LSHLD" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = 34.0
margin_right = 253.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -427, -29 )
text = "SHLD"

[node name="LSN" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -4.0
margin_top = -18.0
margin_right = 173.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( -427, -29 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MY SHIP NAME"

[node name="LHULL" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = 66.0
margin_right = 253.0
margin_bottom = 100.0
text = "HULL"

[node name="LREAC" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = 114.0
margin_right = 311.0
margin_bottom = 148.0
text = "REACTOR"

[node name="LQTS" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = 146.0
margin_right = 326.0
margin_bottom = 180.0
text = "QT SHIELD"

[node name="LO2D" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 172.0
margin_top = 178.0
margin_right = 311.0
margin_bottom = 212.0
text = "O2 DELTA"

[node name="EHP" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
margin_left = 24.0
margin_top = 198.0
margin_right = 48.0
margin_bottom = 228.0
text = "20"
align = 1

[node name="WHP" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
margin_left = 56.0
margin_top = 198.0
margin_right = 80.0
margin_bottom = 227.0
rect_pivot_offset = Vector2( -56, -96 )
text = "20"
align = 1

[node name="LHP" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
margin_left = 88.0
margin_top = 198.0
margin_right = 112.0
margin_bottom = 226.0
rect_pivot_offset = Vector2( -232, 216 )
text = "20"
align = 1

[node name="SHP" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
margin_left = 120.0
margin_top = 198.0
margin_right = 144.0
margin_bottom = 226.0
text = "20"
align = 1

[node name="EHPBar" type="TextureProgress" parent="Tabs/Main/ScreenBase/DOWN"]
margin_left = 24.0
margin_top = 86.0
margin_right = 48.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( -27, 50 )
max_value = 20.0
value = 20.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="FIRE" type="TextureRect" parent="Tabs/Main/ScreenBase/DOWN/EHPBar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -34.0
margin_right = 12.0
margin_bottom = -8.0
texture = ExtResource( 16 )
expand = true

[node name="WHPBar" type="TextureProgress" parent="Tabs/Main/ScreenBase/DOWN"]
margin_left = 56.0
margin_top = 86.0
margin_right = 80.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( -27, 50 )
max_value = 20.0
value = 20.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="FIRE" type="TextureRect" parent="Tabs/Main/ScreenBase/DOWN/WHPBar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -34.0
margin_right = 12.0
margin_bottom = -8.0
texture = ExtResource( 16 )
expand = true

[node name="LHPBar" type="TextureProgress" parent="Tabs/Main/ScreenBase/DOWN"]
margin_left = 88.0
margin_top = 86.0
margin_right = 112.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( -27, 50 )
max_value = 20.0
value = 20.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="FIRE" type="TextureRect" parent="Tabs/Main/ScreenBase/DOWN/LHPBar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -34.0
margin_right = 12.0
margin_bottom = -8.0
texture = ExtResource( 16 )
expand = true

[node name="SHPBar" type="TextureProgress" parent="Tabs/Main/ScreenBase/DOWN"]
margin_left = 120.0
margin_top = 86.0
margin_right = 144.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( -27, 50 )
max_value = 20.0
value = 20.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
fill_mode = 3
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="FIRE" type="TextureRect" parent="Tabs/Main/ScreenBase/DOWN/SHPBar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -34.0
margin_right = 12.0
margin_bottom = -8.0
texture = ExtResource( 16 )
expand = true

[node name="EICO" type="TextureRect" parent="Tabs/Main/ScreenBase/DOWN"]
margin_left = 24.0
margin_top = 54.0
margin_right = 48.0
margin_bottom = 78.0
texture = ExtResource( 8 )
expand = true

[node name="WICO" type="TextureRect" parent="Tabs/Main/ScreenBase/DOWN"]
margin_left = 56.0
margin_top = 54.0
margin_right = 80.0
margin_bottom = 78.0
texture = ExtResource( 11 )
expand = true

[node name="LICO" type="TextureRect" parent="Tabs/Main/ScreenBase/DOWN"]
margin_left = 88.0
margin_top = 54.0
margin_right = 112.0
margin_bottom = 78.0
texture = ExtResource( 9 )
expand = true

[node name="SICO" type="TextureRect" parent="Tabs/Main/ScreenBase/DOWN"]
margin_left = 120.0
margin_top = 54.0
margin_right = 144.0
margin_bottom = 78.0
texture = ExtResource( 10 )
expand = true

[node name="LSHLDVAL" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 34.0
margin_right = 445.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -427, -29 )
custom_colors/font_color = Color( 0, 0.290196, 1, 1 )
text = "0 / 0"
align = 2

[node name="LHULLVAL" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 66.0
margin_right = 445.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( -427, -29 )
custom_colors/font_color = Color( 0.737255, 0.109804, 0, 1 )
text = "0 / 0"
align = 2

[node name="LREACVAL" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 114.0
margin_right = 445.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( -427, -29 )
text = "  Ok"
align = 2

[node name="LQTSVAL" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 146.0
margin_right = 445.0
margin_bottom = 180.0
rect_pivot_offset = Vector2( -427, -29 )
text = "  Ok"
align = 2

[node name="LO2VAL" type="Label" parent="Tabs/Main/ScreenBase/DOWN"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 260.0
margin_top = 178.0
margin_right = 445.0
margin_bottom = 212.0
rect_pivot_offset = Vector2( -427, -29 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "  Ok"
align = 2

[node name="Engineering" type="Tabs" parent="Tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0

[node name="ScreenBase" type="NinePatchRect" parent="Tabs/Engineering"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -240.0
margin_right = 240.0
margin_bottom = 240.0
rect_pivot_offset = Vector2( 152, 104 )
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 126, 126 )
patch_margin_left = 30
patch_margin_top = 54
patch_margin_right = 36
patch_margin_bottom = 33

[node name="REACNAME" type="Label" parent="Tabs/Engineering/ScreenBase"]
margin_left = 8.0
margin_top = 8.0
margin_right = 140.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "REACTOR NAME"

[node name="txt" type="Label" parent="Tabs/Engineering/ScreenBase"]
margin_left = 16.0
margin_top = 56.0
margin_right = 115.0
margin_bottom = 81.0
text = "Stability"

[node name="STAB" type="Label" parent="Tabs/Engineering/ScreenBase"]
margin_left = 16.0
margin_top = 80.0
margin_right = 52.0
margin_bottom = 105.0
rect_scale = Vector2( 2, 2 )
text = "100"
align = 2

[node name="TEMPBar" type="TextureProgress" parent="Tabs/Engineering/ScreenBase"]
margin_left = 152.0
margin_top = 56.0
margin_right = 416.0
margin_bottom = 120.0
max_value = 3000.0
step = 0.2
value = 100.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="Current" type="Label" parent="Tabs/Engineering/ScreenBase/TEMPBar"]
anchor_bottom = 1.0
margin_left = 56.0
margin_top = -8.0
margin_right = 200.0
margin_bottom = -8.0
text = "100"
valign = 1

[node name="Max" type="Label" parent="Tabs/Engineering/ScreenBase/TEMPBar"]
anchor_bottom = 1.0
margin_left = 67.0
margin_top = -8.0
margin_right = 211.0
margin_bottom = -8.0
text = "300"
valign = 2

[node name="Slash" type="Label" parent="Tabs/Engineering/ScreenBase/TEMPBar"]
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -8.0
margin_right = 87.0
margin_bottom = -8.0
text = "/"
align = 1
valign = 2

[node name="OC" type="TextureButton" parent="Tabs/Engineering/ScreenBase"]
margin_left = 424.0
margin_top = 56.0
margin_right = 464.0
margin_bottom = 120.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 12 )
expand = true

[node name="txt2" type="Label" parent="Tabs/Engineering/ScreenBase"]
margin_left = 16.0
margin_top = 152.0
margin_right = 137.0
margin_bottom = 201.0
text = "Engineering"
valign = 1

[node name="txt3" type="Label" parent="Tabs/Engineering/ScreenBase"]
margin_left = 16.0
margin_top = 216.0
margin_right = 137.0
margin_bottom = 264.0
text = "Science Lab"
valign = 1

[node name="txt4" type="Label" parent="Tabs/Engineering/ScreenBase"]
margin_left = 16.0
margin_top = 280.0
margin_right = 137.0
margin_bottom = 328.0
text = "Shields"
valign = 1

[node name="txt5" type="Label" parent="Tabs/Engineering/ScreenBase"]
margin_left = 16.0
margin_top = 344.0
margin_right = 137.0
margin_bottom = 392.0
text = "Weapons"
valign = 1

[node name="txt6" type="Label" parent="Tabs/Engineering/ScreenBase"]
margin_left = 16.0
margin_top = 408.0
margin_right = 137.0
margin_bottom = 456.0
text = "Total Usage"
valign = 1

[node name="EngBar" type="TextureProgress" parent="Tabs/Engineering/ScreenBase"]
margin_left = 152.0
margin_top = 152.0
margin_right = 416.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 64, 48 )
max_value = 1.0
step = 0.01
value = 0.2
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 14 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="Slider" type="HSlider" parent="Tabs/Engineering/ScreenBase/EngBar"]
margin_top = -24.0
margin_right = 264.0
margin_bottom = 24.0
custom_icons/grabber_highlight = ExtResource( 15 )
custom_icons/grabber = ExtResource( 15 )
custom_styles/slider = SubResource( 1 )
max_value = 1.0
step = 0.04
value = 0.25

[node name="TotBar" type="TextureProgress" parent="Tabs/Engineering/ScreenBase"]
margin_left = 152.0
margin_top = 408.0
margin_right = 416.0
margin_bottom = 456.0
rect_pivot_offset = Vector2( 0, -272 )
max_value = 1.0
step = 0.01
value = 0.2
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 14 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="Slider" type="HSlider" parent="Tabs/Engineering/ScreenBase/TotBar"]
margin_top = -24.0
margin_right = 264.0
margin_bottom = 24.0
custom_icons/grabber_highlight = ExtResource( 15 )
custom_icons/grabber = ExtResource( 15 )
custom_styles/slider = SubResource( 1 )
max_value = 1.0
step = 0.04
value = 0.25

[node name="WeaBar" type="TextureProgress" parent="Tabs/Engineering/ScreenBase"]
margin_left = 152.0
margin_top = 344.0
margin_right = 416.0
margin_bottom = 392.0
rect_pivot_offset = Vector2( 64, 48 )
max_value = 1.0
step = 0.01
value = 0.2
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 14 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="Slider" type="HSlider" parent="Tabs/Engineering/ScreenBase/WeaBar"]
margin_top = -24.0
margin_right = 264.0
margin_bottom = 24.0
custom_icons/grabber_highlight = ExtResource( 15 )
custom_icons/grabber = ExtResource( 15 )
custom_styles/slider = SubResource( 1 )
max_value = 1.0
step = 0.04
value = 0.25

[node name="ShiBar" type="TextureProgress" parent="Tabs/Engineering/ScreenBase"]
margin_left = 152.0
margin_top = 280.0
margin_right = 416.0
margin_bottom = 328.0
rect_pivot_offset = Vector2( 64, 48 )
max_value = 1.0
step = 0.01
value = 0.2
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 14 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="Slider" type="HSlider" parent="Tabs/Engineering/ScreenBase/ShiBar"]
margin_top = -24.0
margin_right = 264.0
margin_bottom = 24.0
custom_icons/grabber_highlight = ExtResource( 15 )
custom_icons/grabber = ExtResource( 15 )
custom_styles/slider = SubResource( 1 )
max_value = 1.0
step = 0.04
value = 0.25

[node name="SciBar" type="TextureProgress" parent="Tabs/Engineering/ScreenBase"]
margin_left = 152.0
margin_top = 216.0
margin_right = 416.0
margin_bottom = 264.0
rect_pivot_offset = Vector2( 64, 48 )
max_value = 1.0
step = 0.01
value = 0.2
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 14 )
nine_patch_stretch = true
stretch_margin_left = 2
stretch_margin_top = 2
stretch_margin_right = 2
stretch_margin_bottom = 2

[node name="Slider" type="HSlider" parent="Tabs/Engineering/ScreenBase/SciBar"]
margin_top = -24.0
margin_right = 264.0
margin_bottom = 24.0
custom_icons/grabber_highlight = ExtResource( 15 )
custom_icons/grabber = ExtResource( 15 )
custom_styles/slider = SubResource( 1 )
max_value = 1.0
step = 0.04
value = 0.25

[node name="slashyslash" type="Label" parent="Tabs/Engineering/ScreenBase"]
margin_left = 16.0
margin_top = 80.0
margin_right = 64.0
margin_bottom = 105.0
rect_scale = Vector2( 2, 2 )
text = "%"
align = 2

[node name="Logs" type="Tabs" parent="Tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="Tabs/Logs"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.0
margin_top = -250.0
margin_right = 352.0
margin_bottom = 250.0
rect_min_size = Vector2( 700, 500 )

[node name="HBoxContainer" type="HBoxContainer" parent="Tabs/Logs/ScrollContainer"]
margin_right = 703.0
margin_bottom = 500.0
rect_min_size = Vector2( 700, 500 )

[node name="Left" type="RichTextLabel" parent="Tabs/Logs/ScrollContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 500.0
rect_min_size = Vector2( 100, 0 )
bbcode_enabled = true
scroll_active = false

[node name="Right" type="RichTextLabel" parent="Tabs/Logs/ScrollContainer/HBoxContainer"]
margin_left = 104.0
margin_right = 703.0
margin_bottom = 500.0
rect_min_size = Vector2( 599, 0 )
bbcode_enabled = true

[node name="Connection" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BG" type="TextureRect" parent="Connection"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
stretch_mode = 7

[node name="Logo" type="TextureRect" parent="Connection"]
margin_right = 638.0
margin_bottom = 398.0
texture = ExtResource( 4 )
expand = true

[node name="Address" type="TextEdit" parent="Connection"]
margin_left = 40.0
margin_top = 343.0
margin_right = 601.0
margin_bottom = 383.0
text = "ws://127.0.0.1:7894/pulsar"

[node name="ConnectButton" type="Button" parent="Connection"]
margin_left = 691.0
margin_top = 343.0
margin_right = 905.0
margin_bottom = 383.0
text = "Connect"

[connection signal="tab_changed" from="Tabs" to="." method="_on_tab_changed"]
[connection signal="toggled" from="Tabs/Engineering/ScreenBase/OC" to="." method="_on_OC_toggled"]
[connection signal="value_changed" from="Tabs/Engineering/ScreenBase/EngBar/Slider" to="." method="_on_EngSlider_value_changed"]
[connection signal="value_changed" from="Tabs/Engineering/ScreenBase/TotBar/Slider" to="." method="_on_TotSlider_value_changed"]
[connection signal="value_changed" from="Tabs/Engineering/ScreenBase/WeaBar/Slider" to="." method="_on_WeaSlider_value_changed"]
[connection signal="value_changed" from="Tabs/Engineering/ScreenBase/ShiBar/Slider" to="." method="_on_ShiSlider_value_changed"]
[connection signal="value_changed" from="Tabs/Engineering/ScreenBase/SciBar/Slider" to="." method="_on_SciSlider_value_changed"]
[connection signal="button_down" from="Connection/ConnectButton" to="." method="_on_ConnectButton_button_down"]
